<resources>
    <string name="app_name">EpubViewerSample</string>
    <string name="nextImage">  &gt;&gt;  </string>
    <string name="prevImage">  &lt;&lt;  </string>
    <string name="memo">메모</string>
    <string name="highLight">형광펜</string>
    <string name="underLine">밑줄</string>
    <string name="copyText">복사</string>
    <string name="shareText">공유</string>
    <string name="memoEdit">보기</string>
    <string name="textSpeech">듣기</string>
    <string name="text_search">검색</string>
    <string name="addMemo">메모</string>
    <string name="report">신고</string>
    <string name="continue_selection">페이지넘김</string>
    <string name="continue_highlight">형광펜이어긋기</string>
    <string name="deleteAnnotation">삭제</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
</resources>
