<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="#333333" >

        <TextView
            android:id="@+id/textHighlight"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/highLight"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/textMemo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:text="@string/memo"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/text_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_search"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/textShare"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/shareText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/textSpeech"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/textSpeech"
            android:textSize="12sp" />


        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/text_next_page"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/continue_selection"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/text_continue_highlight"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/continue_highlight"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:background="@drawable/highlight_toolbar_close"
        android:visibility="gone" />

</LinearLayout>