<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="#333333" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp" >

            <TextView
                android:id="@+id/backColor1"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="#fbdab9" />

            <TextView
                android:id="@+id/backColor2"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="#f8c9cd" />

            <TextView
                android:id="@+id/backColor3"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="#f9f0ab" />

            <TextView
                android:id="@+id/backColor4"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="#a8e3c7"  />

            <TextView
                android:id="@+id/backColor5"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:background="#d0c6f5"
            android:textColor="#f8c9cd" />
        </LinearLayout>

        <TextView
            android:layout_width="1sp"
            android:layout_height="fill_parent"
            android:background="@drawable/splitter2" />

        <TextView
            android:id="@+id/deleteAnnotation"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/context_menu_sel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/deleteAnnotation"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:visibility="visible" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="fill_parent"
            android:background="@drawable/splitter2" />

        <TextView
            android:id="@+id/addMemo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/context_menu_sel"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/addMemo"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#5e5e5e" />

        <TextView
            android:id="@+id/textSpeech"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="#333333"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/textSpeech"
            android:textSize="12sp" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="fill_parent"
            android:background="@drawable/splitter2" />

        <TextView
            android:id="@+id/textShare"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/context_menu_sel"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:text="@string/shareText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="fill_parent"
            android:background="@drawable/splitter2" />

        <TextView
            android:id="@+id/text_next_page"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/context_menu_sel"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:text="@string/continue_selection"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:background="@drawable/highlight_toolbar_close"
        android:visibility="gone" />

</LinearLayout>